[project]
name = "cryptopay-aiogram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiosend>=2.1.1",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.2",
]
